--- a/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON.csproj
+++ b/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <Version>1.0.1</Version>
+    <Version>2.0.0</Version>
     <Authors>Frends</Authors>
     <Copyright>Frends</Copyright>
     <Company>Frends</Company>
@@ -30,6 +30,7 @@
     <None Remove="ExcelDataReader" />
   </ItemGroup>
   <ItemGroup>
+	<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.36.0.43782">
